# dragon-arena

./: .gitignore  README.md  package-lock.json  package.json
client-electron/: build-log.txt  electron-builder.json5  index.html  latest.json  package-lock.json  package.json
client-electron/electron/: main.ts
client-electron/src/: App.css  App.tsx  index.css  main.tsx  tmj.d.ts
client-electron/src/components/AdminScreen/: AdminScreen.css  AdminScreen.tsx
client-electron/src/components/Arena/: Arena.css  Arena.tsx  ArenaWorldView.tsx  PixiArenaView.tsx
client-electron/src/components/Arena/pixi/: hideRegions.ts  pixiEffects.ts  pixiEntities.ts  pixiMap.ts  pixiTextureCache.ts  pixiTypes.ts  pixiViewport.ts
client-electron/src/components/ArenaChatBox/: ArenaChatBox.css  ArenaChatBox.tsx
client-electron/src/components/CollectionScreen/: CollectionScreen.css  CollectionScreen.tsx
client-electron/src/components/Dummy/: Dummy.tsx
client-electron/src/components/FriendListPanel/: FriendListPanel.css  FriendListPanel.tsx
client-electron/src/components/GameOver/: GameOver.css
client-electron/src/components/HUD/: HUD.css  HUD.tsx
client-electron/src/components/HomeScreen/: HomeScreen.css  HomeScreen.tsx
client-electron/src/components/LoadingScreen/: LoadingScreen.css  LoadingScreen.tsx
client-electron/src/components/MapRenderer/: MapRenderer.tsx
client-electron/src/components/NameScreen/: NameScreen.css  NameScreen.tsx
client-electron/src/components/Player/: Player.css  Player.tsx
client-electron/src/components/PrivateChatPanel/: PrivateChatPanel.css  PrivateChatPanel.tsx
client-electron/src/components/ProfileScreen/: ProfileScreen.css  ProfileScreen.tsx
client-electron/src/components/Projectile/: Projectile.tsx
client-electron/src/components/ReportModal/: ReportModal.css  ReportModal.tsx
client-electron/src/components/SelectScreen/: SelectScreen.css  SelectScreen.tsx
client-electron/src/components/SettingsPanel/: SettingsPanel.css  SettingsPanel.tsx
client-electron/src/components/SplashScreen/: SplashScreen.css  SplashScreen.tsx
client-electron/src/components/TitleBar/: TitleBar.css  TitleBar.tsx
client-electron/src/config/: characters.ts  spriteMap.ts  visualConfig.ts
client-electron/src/hooks/: useArenaController.ts  useArenaNetworkState.ts  useInput.ts  useMousePosition.ts  usePlayerMovement.ts  useSocket.ts
client-electron/src/i18n/: index.ts  translateBackendError.ts
client-electron/src/i18n/locales/en/: common.json
client-electron/src/i18n/locales/es/: common.json
client-electron/src/i18n/locales/pt-BR/: common.json
client-electron/src/types/: arenaWorld.ts  gameplay.ts
dist-electron/: main.js
server/: server.ts
server-cpp/: BurnSystem.cpp  BurnSystem.h  CMakeLists.txt  CombatSystem.cpp  CombatSystem.h  DashSystem.cpp  DashSystem.h  GameConfig.cpp  GameConfig.h  GameState.h  GameWorld.cpp  GameWorld.h  MapCatalog.cpp  MapCatalog.h  MapLoader.cpp  MapLoader.h  MovementSystem.cpp  MovementSystem.h  NetworkHandler.cpp  NetworkHandler.h  Player.cpp  Player.h  ProjectileSystem.cpp  ProjectileSystem.h  ProtocolConfig.h  ProtocolPayloadBuilder.cpp  ProtocolPayloadBuilder.h  RespawnSystem.cpp  RespawnSystem.h  ServerDiagnostics.cpp  ServerDiagnostics.h  SkillSystem.cpp  SkillSystem.h  WorldSetup.cpp  WorldSetup.h  WorldSnapshotBuilder.cpp  WorldSnapshotBuilder.h  WorldTickRunner.cpp  WorldTickRunner.h  main.cpp
server-cpp/auth/: AuthService.cpp  AuthService.h  PasswordHasher.cpp  PasswordHasher.h  SessionService.cpp  SessionService.h
server-cpp/config/: database_schema.sql  gameplay.json  world.json
server-cpp/config/characters/: charizard.json  hydra.json  meteor.json
server-cpp/config/passives/: burn.json  poison.json
server-cpp/config/spells/: dragon_dive.json  ember.json  fire_blast.json  flamethrower.json  poison_flash.json  poison_shield.json  scratch.json  seed_bite.json
server-cpp/database/: Database.cpp  Database.h  UserRepository.cpp  UserRepository.h
server-cpp/map-assets/tiled/: TX Plant with Shadow.tsj  TX Props.tsj  TX Tileset Grass.tsj  TX Tileset Wall.tsj  TX_High_Grass.tsj  arena_map.tmj  default_map.tmj  training_map.tmj
server-cpp/moderation/: ModerationRepository.cpp  ModerationRepository.h  ReportRepository.cpp  ReportRepository.h
server-cpp/social/: ArenaChatRepository.cpp  ArenaChatRepository.h  FriendshipRepository.cpp  FriendshipRepository.h  PrivateChatRepository.cpp  PrivateChatRepository.h
server-cpp/tests/: GameplayTests.cpp  NetworkHandlerStub.cpp
server-node/server/: server.ts
src/: App.css  App.tsx  main.tsx
src/components/Arena/: Arena.tsx
src/components/Dummy/: Dummy.css  Dummy.tsx
src/components/GameOver/: GameOver.css  GameOver.tsx
src/components/HUD/: HUD.css
src/components/NameScreen/: NameScreen.tsx
src/components/Projectile/: Projectile.css
src/components/SelectScreen/: SelectScreen.css  SelectScreen.tsx
src/config/: spriteMap.ts
src/hooks/: timer.worker.ts  useGameLoop.ts  usePlayerMovement.ts  useSocket.ts
